Bug#18477 - MySQL/InnoDB Ignoring Foreign Keys in ALTER TABLE

InnoDB requires a full table rebuild for foreign key changes.
It was not possible in compare_tables() to detect such changes.

On Heikkis proposal I added a new flag to the syntax parser
where foreign key definition changes are done. I test for
this flag in compare_tables() now.