sql/sql_lex.h
@@ -706,6 +706,7 @@ typedef class st_select_lex SELECT_LEX;
 #define ALTER_CHECK_PARTITION    (1L << 23)
 #define ALTER_REPAIR_PARTITION   (1L << 24)
 #define ALTER_REMOVE_PARTITIONING (1L << 25)
+#define ALTER_FOREIGN_KEY         (1L << 26)
 
 typedef struct st_alter_info
 {
